@@ -251,6 +251,63 @@ FSSScaleY =
 FSSScaleZ = 
 
 
+; #######################################################
+; # Override of table properties
+[TableOverride]
+Difficulty =
+ToneMapper =
+
+; Desktop POV
+ViewDTMode =
+ViewDTScaleX =
+ViewDTScaleY =
+ViewDTScaleZ =
+ViewDTPlayerX =
+ViewDTPlayerY =
+ViewDTPlayerZ =
+ViewDTLookAt =
+ViewDTRotation =
+ViewDTFOV =
+ViewDTLayback =
+ViewDTHOfs =
+ViewDTVOfs =
+ViewDTWindowTop =
+ViewDTWindowBot =
+
+; Cabinet POV
+ViewCabMode =
+ViewCabScaleX =
+ViewCabScaleY =
+ViewCabScaleZ =
+ViewCabPlayerX =
+ViewCabPlayerY =
+ViewCabPlayerZ =
+ViewCabLookAt =
+ViewCabRotation =
+ViewCabFOV =
+ViewCabLayback =
+ViewCabHOfs =
+ViewCabVOfs =
+ViewCabWindowTop =
+ViewCabWindowBot =
+
+; Full Single Screen POV
+ViewFSSMode =
+ViewFSSScaleX =
+ViewFSSScaleY =
+ViewFSSScaleZ =
+ViewFSSPlayerX =
+ViewFSSPlayerY =
+ViewFSSPlayerZ =
+ViewFSSLookAt =
+ViewFSSRotation =
+ViewFSSFOV =
+ViewFSSLayback =
+ViewFSSHOfs =
+ViewFSSVOfs =
+ViewFSSWindowTop =
+ViewFSSWindowBot =
+
 
 ; #######################################################
 ; # VR Player preferences
